--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,4 +1,18 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: books
+#
+#  id         :integer          not null, primary key
+#  name       :string
+#  quantity   :integer          default(0)
+#  year       :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+# Indexes
+#
+#  index_books_on_name_and_year  (name,year) UNIQUE
+#
 
 one:
   name: MyString
