--- a/test/fixtures/subscriptions.yml
+++ b/test/fixtures/subscriptions.yml
@@ -1,4 +1,26 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: subscriptions
+#
+#  id            :integer          not null, primary key
+#  finish        :datetime
+#  is_active     :boolean
+#  start         :datetime
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#  book_id       :integer          not null
+#  subscriber_id :integer          not null
+#
+# Indexes
+#
+#  index_subscriptions_on_book_id        (book_id)
+#  index_subscriptions_on_subscriber_id  (subscriber_id)
+#
+# Foreign Keys
+#
+#  book_id        (book_id => books.id)
+#  subscriber_id  (subscriber_id => subscribers.id)
+#
 
 one:
   subscriber: one
